2002-12-24  Sam Steingold  <sds@gnu.org>

	added VALUE, EITHER and BOTH weak hash tables
	* hashtabl.d (prepare_resize): weak argument is now an object
	(check_weak): new function
	(MAKE-HASH-TABLE, %SET-HASH-TABLE-WEAK-P): use it
	(hash_lookup): value may be obsoleted too
	* constobj.d (type_weak_ht): added
	* constsym.d (Kboth, Keither, Kvalue): added
	* io.d (pr_orecord): print ht_weak() for weak hash tables
	* lispbibl.d (ht_weak): new macro
	(weakkvt_t): added wkvt_type slot
	* spvw_garcol.d (gar_col_normal): handle the new types of weak
	hash tables
	* spvw_typealloc.d (allocate_weakkvt, allocate_weakkvt_low):
	accept a second argument - the wkvt_type

2002-12-24  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-CALL-OUT): fixed argument order in the call
	to fehler_too_few_args()

2002-12-23  Sam Steingold  <sds@gnu.org>

	DOCUMENTATION is now a generic function
	* clos.lisp (ensure-class): use SYS::%SET-DOCUMENTATION explicitly
	(analyze-method-description): pass the method object to
	CHECK-REDEFINITION when possible
	(documentation, (setf documentation)): new generic functions
	* defs2.lisp (defpackage): remember documentation string
	* defstruct.lisp (defstruct): use SYS::%SET-DOCUMENTATION explicitly
	* macros2.lisp (deftype): ditto
	* describe.lisp (describe1): print all documentation
	* places.lisp (documentation, %SET-DOCUMENTATION): removed
	* init.lisp (*documentation*): new variable
	(%set-documentation): implemented
	(check-redefinition): save and check the SYS::FILE docstring

2002-12-22  Sam Steingold  <sds@gnu.org>

	* symbol.d (%PUTF): when the place is a cons, modify it in-place

2002-12-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBSIGSEGV): init to @LTLIBSIGSEGV@ (-L/... -lsigsegv)
	instead of @LIBSIGSEGV@ (/.../libsigsegv.a) because this value
	gets into LIBS and from there into distmakefile and breaks that

2002-12-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (--without*): escape "(|)" in sed RE with #\\